feat 광섬유 측정값 입력시 눌린 모습 시각화하는 기능 추가

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,11 +6,11 @@
 <script th:src="@{/js/slider11.0.2-min.js}"></script>
 
 <div class="slide__main-button">
+    <div class="button unpush" id="button_0">
+    </div>
     <div class="button unpush" id="button_1">
     </div>
     <div class="button unpush" id="button_2">
-    </div>
-    <div class="button unpush" id="button_3">
     </div>
 </div>
 <div class="slide__main-block">
@@ -63,5 +63,9 @@
     <div class="sub-block__part">
         <div>수신부</div>
         <div>측정값</div>
+
+        <input class="number_input" id="target_value" type="number" value="1500">
+        <div id="target_value_result"></div>
+
     </div>
 </div>
