--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" th:href="@{/css/bootstrap-slider.css}">
 <script th:src="@{/js/index.js}"></script>
 <script th:src="@{/js/slider11.0.2-min.js}"></script>
+<script th:src="@{/js/jquery-3.1.1.min.js}"></script>
 
 <div class="slide__main-button">
     <div class="button unpush" id="button_0">
@@ -29,13 +30,13 @@
         <div>송신부</div>
         <b class="randomTag">0</b>
         <input class="span2" data-slider-max="5000" data-slider-min="0" data-slider-step="1"
-               data-slider-value="[0,3000]" id="random"
+               data-slider-value="[0,2950]" id="random"
                name="random"
                type="text" value=""/>
         <b class="randomTag">5000</b>
 
         <label for="number_1">목표 dx 최소값</label>
-        <input class="number_input" id="dx" type="number" value="100">
+        <input class="number_input" id="dx" type="number" value="70">
         <div class="dx_result"></div>
     </div>
     <div class="sub-block__part">
@@ -48,7 +49,7 @@
     <div class="sub-block__part">
         <div>두번째 지점</div>
         <label for="number_2">투과율[%]</label>
-        <input class="number_input" id="number_2" type="number" value="60">
+        <input class="number_input" id="number_2" type="number" value="65">
 
         <div class="value" id="value_2"></div>
 
@@ -64,7 +65,7 @@
         <div>수신부</div>
         <div>측정값</div>
 
-        <input class="number_input" id="target_value" type="number" value="1500">
+        <button class="number_input" id="target_value" type="number">시작</button>
         <div id="target_value_result"></div>
 
     </div>
