feat: 실시간 데이터 전송 및 시각화

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -67,6 +67,7 @@
 
         <button class="number_input" id="target_value" type="number">시작</button>
         <div id="target_value_result"></div>
+        <div id="target_value_status"></div>
 
     </div>
 </div>
