--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -22,6 +22,16 @@
     background: whitesmoke;
     text-align: center;
 }
+.slide__main-button {
+    display: flex;
+    height: 300px;
+    width: 1200px;
+    margin: 30px auto 0 auto;
+    padding: 15px 15px 15px 15px;
+    box-shadow: 0 15px 20px 0 rgb(0 0 0);
+    background: whitesmoke;
+    text-align: center;
+}
 
 .slide__main-block {
     display: flex;
