--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,6 +25,13 @@
     </div>
 </div>
 
+<div class="slide__sub-block" id="target">
+</div>
+
+<div class="slide__sub-block">
+    <div id="plate"></div>
+</div>
+
 <div class="slide__sub-block">
     <div class="sub-block__part">
         <div>
