feat: 동일 색상 연속으로 나오지 않게 / 타이머 표시 (5분 동안 게임 진행) 및 게임 끝날시 팝업 표시

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -30,6 +30,9 @@
 
 <div class="slide__sub-block">
     <div id="plate"></div>
+    <div style="width: 50%; text-align: center">
+        <span class="timer js-timer" style="font-size: 100px">05:00</span>
+    </div>
 </div>
 
 <div class="slide__sub-block">
