--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -46,7 +46,7 @@
 
 .slide__main-block {
     display: flex;
-    height: 30px;
+    height: 50px;
     width: 1200px;
     margin: 30px auto 0 auto;
     padding: 15px 15px 15px 15px;
@@ -57,7 +57,8 @@
 
 .slide__sub-block {
     display: flex;
-    height: 100px;
+    min-height: 100px;
+    height: fit-content;
     width: 1200px;
     margin: 30px auto 0 auto;
     padding: 15px 15px 15px 15px;
@@ -80,7 +81,7 @@
 }
 
 .number_input {
-    width: 50px;
+    width: 60px;
 }
 
 .value {
@@ -89,30 +90,27 @@
 
 .line {
     background: black;
-    margin-right: 30px;
     font-size: 18px;
     text-align: center;
     position: relative;
-    width: 30%;
+    width: 25%;
     height: 20px;
 }
 
 .button {
-    margin-top: 30px;
-    margin-left: 255px;
     font-size: 18px;
     text-align: center;
     position: relative;
     width: 50px;
     height: 50px;
+    border: 2px solid black;
 }
 
 .push {
-    background-color: red;
 }
 
 .unpush {
-    background-color: wheat;
+    opacity: 30%;
 }
 
 .ok {
@@ -137,7 +135,13 @@ div#target_value_result {
     width: 50px;
     margin: 5px;
     height: 50px;
-    border: solid black 1px;
+    border: solid black 2px;
+}
+
+.target_sample {
+    width: 50px;
+    height: 50px;
+    border: solid black 2px;
 }
 
 .blind {
