--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
 
 <link rel="stylesheet" th:href="@{/css/index.css}">
+<link rel="stylesheet" th:href="@{/css/bootstrap.css}">
 <link rel="stylesheet" th:href="@{/css/bootstrap-slider.css}">
+<script th:src="@{/js/jquery-3.1.1.min.js}"></script>
 <script th:src="@{/js/index.js}"></script>
 <script th:src="@{/js/chart.min.js}"></script>
-<script th:src="@{/js/jquery-3.1.1.min.js}"></script>
+<script th:src="@{/js/bootstrap.js}"></script>
 
 <div class="slide__main-button">
-    <div class="button unpush" id="button_0">
+    <div class="line hide">
     </div>
-    <div class="button unpush" id="button_1">
+    <div class="button unpush" id="button_0" style="background-color: rgb(255,0,0)">
     </div>
-    <div class="button unpush" id="button_2">
+    <div class="line hide">
+    </div>
+    <div class="button unpush" id="button_1" style="background-color: rgb(0,255,0)">
+    </div>
+    <div class="line hide">
+    </div>
+    <div class="button unpush" id="button_2" style="background-color: rgb(0,0,255)">
+    </div>
+    <div class="line hide">
     </div>
 </div>
 <div class="slide__main-block">
     <div class="line">
     </div>
-    <div class="line">
+    <div class="button hide">
     </div>
     <div class="line">
+    </div>
+    <div class="button hide">
+    </div>
+    <div class="line">
+    </div>
+    <div class="button hide">
     </div>
     <div class="line">
     </div>
@@ -29,11 +45,23 @@
 </div>
 
 <div class="slide__sub-block">
-    <div id="plate"></div>
+    <div style="width: 20%; text-align: center">
+        <button class="btn border-dark border-3" type="number"
+                style="width: 50%; height: 100%; font-size: 25px">
+            <span id="round">1</span>
+            <span>단계</span>
+        </button>
+    </div>
     <div style="width: 50%; text-align: center">
-        <span class="timer js-timer" style="font-size: 100px">05:00</span>
+        <span class="timer js-timer" style="font-size: 70px">05:00</span>
+    </div>
+    <div style="width: 30%; text-align: center">
+        <button class="btn border-dark border-3" id="target_value" type="number"
+                style="width: 50%; height: 100%; font-size: 30px">시작
+        </button>
     </div>
 </div>
+<div id="plate" class="hidden"></div>
 
 <div class="slide__sub-block">
     <div class="sub-block__part">
@@ -50,14 +78,14 @@
         <label for="number_1">투과율[%]</label>
         <input class="number_input" id="number_1" type="number" value="65">
 
-        <div class="value" id="value_1"></div>
+        <div class="value" id="value_1" style="font-size: 20px"></div>
     </div>
     <div class="sub-block__part">
         <div>두번째 지점</div>
         <label for="number_2">투과율[%]</label>
         <input class="number_input" id="number_2" type="number" value="48.5">
 
-        <div class="value" id="value_2"></div>
+        <div class="value" id="value_2" style="font-size: 20px"></div>
 
     </div>
     <div class="sub-block__part">
@@ -65,15 +93,143 @@
         <label for="number_3">투과율[%]</label>
         <input class="number_input" id="number_3" type="number" value="20">
 
-        <div class="value" id="value_3"></div>
+        <div class="value" id="value_3" style="font-size: 20px"></div>
     </div>
     <div class="sub-block__part">
         <div>수신부</div>
-        <button class="number_input" id="target_value" type="number">시작</button>
         <div id="target_value_result"></div>
         <div id="target_value_status"></div>
     </div>
 </div>
 <div class="slide__main-chart">
-    <canvas id="myChart" width="800px" height="200px"></canvas>
+    <canvas id="myChart" width="800px" height="150px"></canvas>
 </div>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-body" style="white-space: pre-line">
+
+                <div style="display: flex">
+                    <div class="target_sample" style="background-color: rgb(255,0,0)"></div>
+                    <div class="target_sample" style="text-align: center; border: none; vertical-align: middle">
+                        <div style="position: relative; bottom: 25%;">+</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(255,255,255)"></div>
+                    <div class="target_sample" style="text-align: center; border: none;">
+                        <div style="position: relative; bottom: 25%;">+</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(255,255,255)"></div>
+                    <div class="target_sample" style="text-align: center; border: none; vertical-align: middle">
+                        <div style="position: relative; bottom: 25%;">=</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(255,0,0)"></div>
+                </div>
+
+                <div style="display: flex">
+                    <div class="target_sample" style="background-color: rgb(0,255,0)"></div>
+                    <div class="target_sample" style="text-align: center; border: none; vertical-align: middle">
+                        <div style="position: relative; bottom: 25%;">+</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(255,255,255)"></div>
+                    <div class="target_sample" style="text-align: center; border: none;">
+                        <div style="position: relative; bottom: 25%;">+</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(255,255,255)"></div>
+                    <div class="target_sample" style="text-align: center; border: none; vertical-align: middle">
+                        <div style="position: relative; bottom: 25%;">=</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(0,255,0)"></div>
+                </div>
+
+                <div style="display: flex">
+                    <div class="target_sample" style="background-color: rgb(0,0,255)"></div>
+                    <div class="target_sample" style="text-align: center; border: none; vertical-align: middle">
+                        <div style="position: relative; bottom: 25%;">+</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(255,255,255)"></div>
+                    <div class="target_sample" style="text-align: center; border: none;">
+                        <div style="position: relative; bottom: 25%;">+</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(255,255,255)"></div>
+                    <div class="target_sample" style="text-align: center; border: none; vertical-align: middle">
+                        <div style="position: relative; bottom: 25%;">=</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(0,0,255)"></div>
+                </div>
+
+                <div style="display: flex">
+                    <div class="target_sample" style="background-color: rgb(255,0,0)"></div>
+                    <div class="target_sample" style="text-align: center; border: none; vertical-align: middle">
+                        <div style="position: relative; bottom: 25%;">+</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(0,255,0)"></div>
+                    <div class="target_sample" style="text-align: center; border: none;">
+                        <div style="position: relative; bottom: 25%;">+</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(255,255,255)"></div>
+                    <div class="target_sample" style="text-align: center; border: none; vertical-align: middle">
+                        <div style="position: relative; bottom: 25%;">=</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(255,255,0)"></div>
+                </div>
+
+                <div style="display: flex">
+                    <div class="target_sample" style="background-color: rgb(255,0,0)"></div>
+                    <div class="target_sample" style="text-align: center; border: none; vertical-align: middle">
+                        <div style="position: relative; bottom: 25%;">+</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(0,0,255)"></div>
+                    <div class="target_sample" style="text-align: center; border: none;">
+                        <div style="position: relative; bottom: 25%;">+</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(255,255,255)"></div>
+                    <div class="target_sample" style="text-align: center; border: none; vertical-align: middle">
+                        <div style="position: relative; bottom: 25%;">=</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(255,0,255)"></div>
+                </div>
+
+                <div style="display: flex">
+                    <div class="target_sample" style="background-color: rgb(0,255,0)"></div>
+                    <div class="target_sample" style="text-align: center; border: none; vertical-align: middle">
+                        <div style="position: relative; bottom: 25%;">+</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(0,0,255)"></div>
+                    <div class="target_sample" style="text-align: center; border: none;">
+                        <div style="position: relative; bottom: 25%;">+</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(255,255,255)"></div>
+                    <div class="target_sample" style="text-align: center; border: none; vertical-align: middle">
+                        <div style="position: relative; bottom: 25%;">=</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(0,255,255)"></div>
+                </div>
+
+                <div style="display: flex">
+                    <div class="target_sample" style="background-color: rgb(255,0,0)"></div>
+                    <div class="target_sample" style="text-align: center; border: none; vertical-align: middle">
+                        <div style="position: relative; bottom: 25%;">+</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(0,255,0)"></div>
+                    <div class="target_sample" style="text-align: center; border: none;">
+                        <div style="position: relative; bottom: 25%;">+</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(0,0,255)"></div>
+                    <div class="target_sample" style="text-align: center; border: none; vertical-align: middle">
+                        <div style="position: relative; bottom: 25%;">=</div>
+                    </div>
+                    <div class="target_sample" style="background-color: rgb(255,255,255)"></div>
+                </div>
+
+                <div style="text-align: center">
+                    <span style="font-weight: 1100; color: red; font-size: 30px">5초 후에 게임을 시작합니다.</span>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<li class="nav-item hidden">
+    <div id="info_message" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal">도움말</div>
+</li>
